tests/ui/fail_limitation_non_trivial_receivers.stderr
error[E0308]: mismatched types
  --> tests/ui/fail_limitation_non_trivial_receivers.rs:55:1
   |
16 |     fn hello_box(self: Box<Self>) -> String;
   |        --------- arguments to this function are incorrect
...
55 | #[thin_delegate::fill_delegate]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Box<_>`, found `String`
   |
   = note: expected struct `Box<_>`
              found struct `String`
   = note: for more on the distinction between the stack and the heap, read https://doc.rust-lang.org/book/ch15-01-box.html, https://doc.rust-lang.org/rust-by-example/std/box.html, and https://doc.rust-lang.org/std/boxed/index.html
note: method defined here
  --> tests/ui/fail_limitation_non_trivial_receivers.rs:16:8
   |
16 |     fn hello_box(self: Box<Self>) -> String;
   |        ^^^^^^^^^
   = note: this error originates in the attribute macro `::thin_delegate::__internal__fill_delegate` which comes from the expansion of the attribute macro `thin_delegate::fill_delegate` (in Nightly builds, run with -Z macro-backtrace for more info)
help: store this in the heap by calling `Box::new`
   |
55 | Box::new(#[thin_delegate::fill_delegate])
   | +++++++++                               +

error[E0308]: mismatched types
  --> tests/ui/fail_limitation_non_trivial_receivers.rs:55:1
   |
17 |     fn hello_rc(self: Rc<Self>) -> String;
   |        -------- arguments to this function are incorrect
...
55 | #[thin_delegate::fill_delegate]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Rc<_>`, found `String`
   |
   = note: expected struct `Rc<_>`
              found struct `String`
note: method defined here
  --> tests/ui/fail_limitation_non_trivial_receivers.rs:17:8
   |
17 |     fn hello_rc(self: Rc<Self>) -> String;
   |        ^^^^^^^^
   = note: this error originates in the attribute macro `::thin_delegate::__internal__fill_delegate` which comes from the expansion of the attribute macro `thin_delegate::fill_delegate` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui/fail_limitation_non_trivial_receivers.rs:55:1
   |
18 |     fn hello_arc(self: Arc<Self>) -> String;
   |        --------- arguments to this function are incorrect
...
55 | #[thin_delegate::fill_delegate]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Arc<_>`, found `String`
   |
   = note: expected struct `Arc<_>`
              found struct `String`
note: method defined here
  --> tests/ui/fail_limitation_non_trivial_receivers.rs:18:8
   |
18 |     fn hello_arc(self: Arc<Self>) -> String;
   |        ^^^^^^^^^
   = note: this error originates in the attribute macro `::thin_delegate::__internal__fill_delegate` which comes from the expansion of the attribute macro `thin_delegate::fill_delegate` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui/fail_limitation_non_trivial_receivers.rs:55:1
   |
19 |     fn hello_pin(self: Pin<&Self>) -> String;
   |        --------- arguments to this function are incorrect
...
55 | #[thin_delegate::fill_delegate]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Pin<&_>`, found `String`
   |
   = note: expected struct `Pin<&_>`
              found struct `String`
note: method defined here
  --> tests/ui/fail_limitation_non_trivial_receivers.rs:19:8
   |
19 |     fn hello_pin(self: Pin<&Self>) -> String;
   |        ^^^^^^^^^
   = note: this error originates in the attribute macro `::thin_delegate::__internal__fill_delegate` which comes from the expansion of the attribute macro `thin_delegate::fill_delegate` (in Nightly builds, run with -Z macro-backtrace for more info)
